--- a/www/app/apps/dev/devmenu.html
+++ b/www/app/apps/dev/devmenu.html
@@ -5,15 +5,29 @@
   </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
-      <div class="title">הגדרות</div>
+      <div class="title"> תפריט מפתחים </div>
     </div>
   </ion-nav-title>
-  <ion-content class="pele-background">
+  <ion-content class="pele-background" scroll="false">
 
     <div class="list">
+      <a class="item pele_rtl">LocalStorage usage :  {{getLocalStorageUsage().mb}} MB  <br \>
+      largest - {{getLocalStorageUsage().largetKey}} :  {{getLocalStorageUsage().maxSize}}</a>
+      <a class="item  pele_rtl">PELE4U_MSISDN  <br \>
+         config:{{config_PELE4U_MSISDN}} <br \>storage :{{storage_PELE4U_MSISDN}}</a>
+
+      <a class="item item-icon-left item-icon-right" ng-click="setDebug(!appDebug)">
+          Debug <span ng-show="appDebug"> ON </span><span ng-show="!appDebug"> OFF </span>
+        <i class="icon ion-ios-pulse-strong"></i>
+      </a>
       <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
       <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
       ניקוי קובץ לוגים
+        <i class="icon ion-trash-b"></i>
+      </a>
+      <a class="item item-icon-left item-icon-right" ng-click="clearStorage()">
+      <i ng-show="storageCheckClear" style="color:green" class="icon ion-checkmark"></i>
+        מחיקת זיכרון מטמון
         <i class="icon ion-trash-b"></i>
       </a>
       <a class="item  item-icon-right" ui-sref="app.dev.attach">
@@ -27,14 +41,7 @@
       <a class="item  item-icon-right" ui-sref="app.dev.log">
         <i class="icon ion-bug"></i>
           הצג קובץ לוג
-        </a>
-
-      <!--
-      <a class="item item-icon-right" ng-click="updateAppVersion()">
-        <i class="icon ion-android-download"></i>
-        <p>עדכון גרסה</p>
       </a>
-	  -->
       <a class="item item-icon-right" ui-sref="app.p1_appsLists">
         <i class="icon ion-help-buoy"></i>
         חזרה לאפליקציה
