--- a/www/app/apps/docApprove/INI/iniDetails.html
+++ b/www/app/apps/docApprove/INI/iniDetails.html
@@ -25,12 +25,12 @@
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
         <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <div class="list">
               <div ng-repeat="action in docDetails.ACTION_HISTORY" class="pele_rtl">
-                <div class="item item-divider item-icon-left item-icon-right text-right action-history-item">
-                  <i class="icon" ng-click="toggleActionItem(action)" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
-                  <i class="icon" ng-class="action.right_icon"></i>
+                <div ng-click="action.left_icon && toggleActionItem(action)" class="item item-divider item-icon-left item-icon-right text-right action-history-item">
+                  <i class="icon pel_icon icon-sm" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
+                  <i class="icon pel_icon icon-sm" ng-class="action.right_icon"></i>
                 </div>
                 <div class="item bo-border pele_rtl text-right item-icon-left item-icon-right text-right" ng-show="action.display">
                   <div class="row">
@@ -39,7 +39,7 @@
                   </div>
                   <div class="row">
                     <div class="col">תאריך:</div>
-                    <div class="col col-75">{{action.ACTION_DATE}}</div>
+                    <div class="col col-75">{{action.ACTION_DATE| date : 'hh:ss dd-MM-yyyy'}}</div>
                   </div>
                   <div class="row">
                     <div class="col">הערות:</div>
@@ -51,111 +51,73 @@
 
           </ion-scroll>
         </ion-slide>
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
-            <ul class="list">
-              <li class="item item-info no-border">
-                <div class="item item-divider item-icon-left item-icon-right">
-                  <h2 class="text-right pele_rtl">תיאור משימה</h2>
-                  <i class="icon ion-clipboard"></i>
-                </div>
-                <div class="item-section pele_rtl item-text-wrap text-right">
-                  {{docDetails.TASK_DESCRIPTION}}
-                </div>
-              </li>
-            </ul>
-          </ion-scroll>
-        </ion-slide>
+
         <!------------------------------------------------------------------------------->
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
         <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
-          <ion-scroll class="pele_rtl text-right" style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" class="pele_rtl text-right" style="height:80%" delegate-handle="slide1Scroll">
             <!-- Refresh to get the new posts -->
             <ul class="list">
               <li class="item item-info no-border">
+                <div class="item item-divider item-icon-left item-icon-right">
+                  <h2 class="text-right pele_rtl">תיאור ייזום</h2>
+                  <i class="icon pel_icon icon-md ion-clipboard"></i>
+                </div>
+                <div class="item-section pele_rtl item-text-wrap text-right">
+                  {{docDetails.INIT_DESCRIPTION}}
+                </div>
+              </li>
+              <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
-                  <i class="icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <i class="icon ion-clipboard"></i>
-                  <h2 class="text-right pele_rtl">פרטי המשימה</h2>
+                  <i class="icon pel_icon icon-sm" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon icon-md ion-clipboard"></i>
+                  <h2 class="text-right pele_rtl">פרטי ייזום</h2>
                 </div>
                 <div class="item-section" ng-show="info_elm">
                   <table class="pele_rtl text-right">
                     <tbody>
                       <tr>
-                        <td class="label">שם: </td>
-                        <td class="info"> {{docDetails.BAN_NAME}}</td>
-                      </tr>
-                      <tr>
-                        <td class="label">מספר לקוח: </td>
-                        <td class="info"> {{docDetails.BAN}}</td>
-                      </tr>
-                      <tr>
-                        <td class="label">נושא משימה: </td>
-                        <td class="info"> {{docDetails.TASK_TYPE}}</td>
-                      </tr>
-                      <tr>
-                        <td class="label">תת נושא: </td>
-                        <td class="info"> {{docDetails.SUB_TASK_TYPE}}</td>
+                        <td class="label">שם מסמך: </td>
+                        <td class="info"> {{docDetails.DOC_NAME}}</td>
                       </tr>
                       <tr>
                         <td class="label">תאריך יצירה: </td>
-                        <td class="info pele_rtl"> {{docDetails.CREATION_DATE| date:'dd-MM-yyyy HH:mm'}}</td>
+                        <td class="info"> {{docDetails.CREATION_DATE|date:'dd-MM-yyyy HH:mm'}}</td>
                       </tr>
                       <tr>
-                        <td class="label">האם משימה חוזרת: </td>
-                        <td class="info"> {{docDetails.RETURN_TASK}}</td>
+                        <td class="label">יוזם: </td>
+                        <td class="info"> {{docDetails.PREPARER_NAME}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">הצדקת ייזום: </td>
+                        <td class="info"> {{docDetails.NOTE_TO_APPROVER}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">ספק מומלץ: </td>
+                        <td class="info"> {{docDetails.VENDOR_NAME}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">נדרש חוזה תחזוקה: </td>
+                        <td class="info pele_rtl"> {{docDetails.IS_CONTRACT_REQUIRED}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">קיום הצעת מחיר: </td>
+                        <td class="info"> {{docDetails.IS_EXISTS_QUOTATION}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">סכום משוער: </td>
+                        <td class="info"> {{docDetails.AMOUNT}} {{docDetails.CURRENCY_CODE}}</td>
                       </tr>
                     </tbody>
                   </table>
                 </div>
               </li>
-              <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right item-icon-left" ng-init="sys_data=false" ng-click="sys_data=!sys_data">
-                  <i class="icon" ng-class="sys_data ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <h2 class="text-right pele_rtl">נתוני מערכת</h2>
-                  <i class="icon ion-clipboard"></i>
-                </div>
-                <div class="item-section" ng-show="sys_data">
-                  <table class="pele_rtl text-right">
-                    <tbody>
-                      <tr class="pele_rtl" ng-repeat="item in docDetails.SYSTEM_INFORMATION">
-                        <td class="label">{{item.PROMPT}}: </td>
-                        <td class="info"> {{item.VALUE}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </li>
-              <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right item-icon-left" ng-init="extra_elm=false" ng-click="extra_elm=!extra_elm">
-                  <i class="icon" ng-class="extra_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <h2 class="text-right pele_rtl">נתונים נוספים</h2>
-                  <i class="icon ion-clipboard"></i>
-                </div>
-                <div class="item-section" ng-show="extra_elm">
-                  <table class="pele_rtl text-right">
-                    <tbody>
-                      <tr class="pele_rtl" ng-repeat="item in docDetails.EXTRA_INFORMATION">
-                        <td class="label">{{item.PROMPT}}: </td>
-                        <td class="info"> {{item.VALUE}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </li>
-              <!--li class="item item-info no-border">
-                <div class="item item-divider item-icon-right item-icon-left" ng-init="toggleInit('desc_elm')">
-                  <i class="icon" ng-class="desc_elm.icon" ng-click="toggle(desc_elm)"></i>
-                  <i class="icon ion-clipboard"></i>
-                  <h2 class="text-right pele_rtl">תיאור</h2>
-                </div>
-              </li-->
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="attach_elm=true" ng-click="attach_elm=!attach_elm">
-                  <i class="icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <h2 class="text-right pele_rtl">נספחי משימה</h2>
-                  <i class="icon ion-paperclip"></i>
+                  <i class="icon pel_icon icon-sm" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <h2 class="text-right pele_rtl">נספחי ייזום</h2>
+                  <i class="icon pel_icon icon-md ion-paperclip"></i>
                 </div>
                 <div class="item-section" ng-show="attach_elm">
                   <table class="pele_rtl attachments-table text-right">
