--- a/www/app/apps/docApprove/PO/p4_po_doc_10002.html
+++ b/www/app/apps/docApprove/PO/p4_po_doc_10002.html
@@ -31,15 +31,15 @@
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
         <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
               <a class="item item-divider item-icon-right pele-item-icon-left" ng-hide="pelHideShow2( detail.DISPLAY_FLAG )" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1; ">
-                <!-- <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE)}}"></i> -->
+                <!-- <i class="icon pel_icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE)}}"></i> -->
                 <!--<i ng-class="detail.SHOW_FLAG ? 'icon-collapse' : 'icon-expand'"></i>-->
                 <i ng-class="showIconCollapseInAcctionHistory(detail.SHOW_FLAG , detail.HIDEN_FLAG)"></i>
                 <p class="text-right pele_rtl">{{detail.SEQUENCE_NUM}}. {{detail.EMPLOYEE_NAME}}</p>
-                <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE , detail.CHAR_ACTION_DATE , detail.NOTE)}}"></i>
+                <i class="icon pel_icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE , detail.CHAR_ACTION_DATE , detail.NOTE)}}"></i>
               </a>
 
               <label class="pele-item" ng-hide="hidenAcctionHistoryDetails(detail.SHOW_FLAG, detail.HIDEN_FLAG, detail.PUSH_COUNT , detail.NOTE)">
@@ -68,7 +68,7 @@
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
         <ion-slide on-drag-left="disable('drag')" on-drag-right="enable('drag')">
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <!-- Refresh to get the new posts -->
             <!--
             <label class="item">
@@ -81,20 +81,18 @@
               <!---------------------------- 10002 --------------------------------->
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
-                  <i class="icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-
+                  <i class="icon pel_icon icon-sm" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">תיאור הזמנה</h2>
                 </div>
-
                 <div class="item-section pele_rtl item-text-wrap" ng-show="info_elm">
                   {{COMMENTS}}
                 </div>
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="details_elm=true" ng-click="details_elm=!details_elm">
-                  <i class="icon" ng-class="details_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon icon-sm" ng-class="details_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">פרטי הזמנה</h2>
-                  <i class="icon ion-clipboard"></i>
+                  <i class="icon pel_icon icon-md ion-clipboard"></i>
                 </div>
                 <div class="item-section" ng-show="details_elm">
                   <table class="pele_rtl text-right">
@@ -125,9 +123,9 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="extra_elm=false" ng-click="extra_elm=!extra_elm">
-                  <i class="icon" ng-class="extra_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon  icon-sm" ng-class="extra_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">הסבר כללי</h2>
-                  <i class="icon ion-clipboard"></i>
+                  <i class="icon pel_icon icon-md ion-clipboard"></i>
                 </div>
 
                 <div class="item-section pele_rtl item-text-wrap" ng-show="extra_elm">
@@ -136,9 +134,9 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="reason_elm=false" ng-click="reason_elm=!reason_elm">
-                  <i class="icon" ng-class="reason_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon  icon-sm" ng-class="reason_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נימוק לבחירת ספק</h2>
-                  <i class="icon ion-clipboard"></i>
+                  <i class="icon pel_icon icon-md ion-clipboard"></i>
                 </div>
 
                 <div class="item-section pele_rtl item-text-wrap" ng-show="reason_elm">
@@ -147,16 +145,16 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="prices_elm=false" ng-click="prices_elm=!prices_elm">
-                  <i class="icon" ng-class="prices_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon  icon-sm" ng-class="prices_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">השוואת מחירים</h2>
-                  <i class="icon ion-calculator"></i>
+                  <i class="icon pel_icon icon-md ion-calculator"></i>
                 </div>
                 <div class="item-section pele_rtl item-text-wrap" ng-show="prices_elm">
                   <div ng-show="MATCH_PRICE.length==0">
                     לא קיים מידע רלוונטי
                   </div>
                 </div>
-                <div ng-repeat="matchPricerow in MATCH_PRICE">
+                <div ng-repeat="matchPricerow in MATCH_PRICE" ng-show="prices_elm">
                   <div class="card">
                     <div class="item item-divider text-right pele_rtl">
                       שם ספק :{{matchPricerow.VENDOR_NAME}}
@@ -175,9 +173,9 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="attach_elm=false" ng-click="attach_elm=!attach_elm">
-                  <i class="icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon icon-sm" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נספחי הזמנה</h2>
-                  <i class="icon ion-paperclip"></i>
+                  <i class="icon pel_icon icon-md ion-paperclip"></i>
                 </div>
 
                 <div class="item-section pele_rtl item-text-wrap" ng-show="attach_elm">
